--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .data-box{
 	border: 1px solid #434343;
     background-color: #f5f5f5;
-    margin:10px;
+    margin:5px;
     width:150px;
     height:50px;
 }
@@ -17,7 +17,8 @@
 	width:300px;
 	height:500px;
 	text-align:center;
-	margin-left:500px;
+	margin:30px;
+	float:right;
 
 }
 
